@@ -1,3 +1,7 @@
+2016-03-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoIOS_SAA.pm: added jitter statistics
+
 2016-02-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* Health status icons for device reachability
